FIX: z-index issues

--- a/src/components/home/unberryWorks/styles.scss
+++ b/src/components/home/unberryWorks/styles.scss
@@ -103,6 +103,8 @@
     align-items: center;
     justify-content: center;
     margin-top: 30px;
+    position: relative;
+    z-index: 9;
 
     &.next {
       margin-left: 10px;
